--- a/week1/TEMPLATE-ggplot-review.qmd
+++ b/week1/TEMPLATE-ggplot-review.qmd
@@ -1,6 +1,6 @@
 ---
-title: "TEMPLATE - `{ggplot2}` review"
-author: "Your Name"
+title: "`{ggplot2}` review"
+author: "Nathalie"
 date: 2026-01-07
 toc: true
 ---
@@ -18,6 +18,7 @@ This template follows the [`{ggplot2}` review slides](https://eds-240-data-viz.g
 #| warning: false
 # load packages ----
 library(tidyverse)
+library(patchwork)
 library(palmerpenguins)
 ```
 
@@ -71,6 +72,11 @@ Explore the relationship between penguin **bill length** and **bill depth**. Our
 ```{r}
 #| warning: false
 #..........scatter plot with custom categorical colors...........
+ggplot(data = penguins, mapping = aes(x = bill_length_mm, y = bill_depth_mm, colour = species)) +
+  geom_point() +
+  scale_color_manual(values = c("darkorange", "purple", "cyan")) +
+  theme(main = "Species") +
+  theme_classic() 
 ```
 
 ### Example 2 (mapping color to continuous variable)
@@ -78,8 +84,10 @@ Explore the relationship between penguin **bill length** and **bill depth**. Our
 ```{r}
 #| warning: false
 #...........scatter plot with custom continuous colors...........
-ggplot(penguins, aes(x = bill_length_mm, y = bill_depth_mm)) + 
-  geom_point()
+ggplot(penguins, aes(x = bill_length_mm, y = bill_depth_mm, color = body_mass_g)) + 
+  geom_point() +
+  scale_color_gradient(low = "#F7DD4C", high = "#132B43")+
+  theme_classic()
 ```
 
 ### Example 3 (updating color for all points)
@@ -88,7 +96,7 @@ ggplot(penguins, aes(x = bill_length_mm, y = bill_depth_mm)) +
 #| warning: false
 #................scatter plot with all blue points...............
 ggplot(penguins, aes(x = bill_length_mm, y = bill_depth_mm)) + 
-  geom_point()
+  geom_point(color = "blue")
 ```
 
 ### Example 4 (local vs. global data & variable mappings) 
@@ -108,6 +116,11 @@ penguins_summary <- penguins |>
   )
 
 #..........create ggplot with layers from different dfs..........
+ggplot() +
+  geom_point(data = penguins, aes(x = bill_length_mm, y = bill_depth_mm, color = species), alpha = 0.5) +
+  geom_point(data = penguins_summary, aes(x = mean_bill_length_mm, y = mean_bill_depth_mm, color = species), size = 5, shape = "triangle") +
+  scale_fill_manual(values = c("purple", "pink", "blue"))+
+  theme_classic()
 ```
 
 ### Example 5 & 6 (mapping variables globally vs. locally)
@@ -118,8 +131,9 @@ penguins_summary <- penguins |>
 #| warning: false
 #| message: false
 #.............scatterplot with lms fitted to species.............
-ggplot(penguins, aes(x = bill_length_mm, y = bill_depth_mm)) +
-  geom_point()
+ggplot(penguins, aes(x = bill_length_mm, y = bill_depth_mm, color = species)) +
+  geom_point() +
+  geom_smooth(method = "lm")
 ```
 
 - local mappings only apply to that particular layer:
@@ -129,7 +143,8 @@ ggplot(penguins, aes(x = bill_length_mm, y = bill_depth_mm)) +
 #| message: false
 #..........scatterplot with lm fitted to entire data set.........
 ggplot(penguins, aes(x = bill_length_mm, y = bill_depth_mm)) +
-  geom_point()
+  geom_point(aes(color = species)) +
+  geom_smooth(method = "lm")
 ```
 
 ### Example 7 (piping data into a ggplot)
@@ -139,6 +154,11 @@ ggplot(penguins, aes(x = bill_length_mm, y = bill_depth_mm)) +
 ```{r}
 #| warning: false
 #........filter for Gentoo penguins, then pipe into ggplot.......
+penguins %>% 
+  filter(species == "Gentoo") %>% 
+  ggplot(aes(x = bill_length_mm, y = bill_depth_mm, color = species)) +
+  geom_point() +
+  theme_classic()
 ```
 
 ## Plot #2
@@ -160,6 +180,9 @@ Explore **penguin species counts**. Our goals are to review:
 ```{r}
 #| warning: false
 #...................bar plot with default stat...................
+ggplot(data = penguins, aes(x = species, fill = species)) +
+  geom_bar() + # default transformation is a count summary
+  scale_fill_manual(values = c("pink", "purple", "blue"))
 ```
 
 ### Example 2 (override default stat)
@@ -174,6 +197,8 @@ penguin_summary <- penguins |>
   count(species) 
 
 #..create bar heights based on `identity` of values in `n` col...
+ggplot(penguin_summary, aes(x = species, y = n))+
+  geom_col(stat = "identity") # map height of bars to value provided in data frame manually rather than the one computed by col()
 ```
 
 **Note:** See the slides for an example of overriding the default stat *mapping* (e.g. displaying these y-axis values as proportions, rather than counts)
@@ -187,7 +212,7 @@ penguin_summary <- penguins |>
 ```{r}
 #| warning: false
 #........................default position........................
-ggplot(penguins, aes(x = species)) +
+ggplot(penguins, aes(x = species, fill = island)) +
   geom_bar()
 ```
 
@@ -199,7 +224,7 @@ ggplot(penguins, aes(x = species)) +
 #| warning: false
 #..........................position fill.........................
 ggplot(penguins, aes(x = species, fill = island)) +
-  geom_bar() 
+  geom_bar(position = "fill") # All the same height to compare proportions rather than values
 ```
 
 - `position = "dodge"` places overlapping bars directly beside one another (easier to compare individual values):
@@ -208,7 +233,7 @@ ggplot(penguins, aes(x = species, fill = island)) +
 #| warning: false
 #.........................position dodge.........................
 ggplot(penguins, aes(x = species, fill = island)) +
-  geom_bar() 
+  geom_bar(position = "dodge") 
 ```
 
 ### Example 6 (alternatively, use `position_*()`)
@@ -217,7 +242,7 @@ ggplot(penguins, aes(x = species, fill = island)) +
 #| warning: false
 #.......................position functions.......................
 ggplot(penguins, aes(x = species, fill = island)) +
-  geom_bar() 
+  geom_bar(position = position_dodge2(preserve = "single"))
 ```
 
 ### Example 7 (default coordinate system)
@@ -226,7 +251,7 @@ ggplot(penguins, aes(x = species, fill = island)) +
 #| warning: false
 #....................default coordinate system...................
 ggplot(penguins, aes(x = species)) +
-  geom_bar()
+  geom_bar() 
 ```
 
 ### Example 8 & 9 (alternative coordinate systems)
@@ -237,7 +262,8 @@ ggplot(penguins, aes(x = species)) +
 #| warning: false
 #............................flip axes...........................
 ggplot(penguins, aes(x = species)) +
-  geom_bar()
+  geom_bar() +
+  coord_flip()
 ```
 
 - polar coordinates: 
@@ -246,7 +272,8 @@ ggplot(penguins, aes(x = species)) +
 #| warning: false
 #........................polar coordinates.......................
 ggplot(penguins, aes(x = species)) +
-  geom_bar()
+  geom_bar() +
+  coord_polar()
 ```
 
 ### Example 10 (pre-made themes + futher customization with `theme()`)
@@ -255,7 +282,11 @@ ggplot(penguins, aes(x = species)) +
 #| warning: false
 #..................premade theme + custom theme..................
 ggplot(penguins, aes(x = species)) +
-  geom_bar()
+  geom_bar() +
+  theme_classic() +
+  theme(
+    axis.title = element_text(size = 17, color = "purple")
+  )
 ```
 
 ## Plot #3 
@@ -280,4 +311,53 @@ Explore **penguin flipper lengths**. Our goals are to review:
 #| warning: false
 #| message: false
 #......................labels & facet wrap.......................
+ggplot(penguins, aes(x = flipper_length_mm, fill = species)) +
+  geom_histogram(position = "identity", alpha = 0.6) +
+  scale_fill_manual(values = c("darkorange", "purple", "cyan4"))+
+  labs(title = "Flipper Length of Palmer Penguins", 
+         x = "Flipper length (mm)", 
+         y = "Frequency", 
+         fill = "Species") +
+  facet_wrap(~species, ncol = 1)
+```
+
+## Plot #4
+
+Combine individual plots into a single graphic using `{patchwork}`:
+
+1. Save plots to object names
+
+```{r}
+#.................save scatter plot to obj `p1`..................
+p1 <- ggplot(penguins, aes(x = bill_length_mm, y = bill_depth_mm, color = body_mass_g)) +
+  geom_point() +
+  scale_color_gradient(low = "#F7DD4C", high = "#132B43") +
+  theme(
+    legend.position = "top" # note: this is newly added from earlier!
+  )
+
+#....................save bar plot to obj `p2`...................
+p2 <- ggplot(penguins, aes(x = species)) +
+  geom_bar() +
+  theme_light()
+
+#...................save histogram to obj `p3`...................
+p3 <- ggplot(penguins, aes(x = flipper_length_mm, fill = species)) + 
+  geom_histogram(position = "identity", alpha = 0.5) +
+  scale_fill_manual(values = c("darkorange", "purple", "cyan4"))
+```
+
+2. Assemble single graphic
+
+```{r}
+#| warning: false
+#| message: false
+#..........................stacked plots.........................
+p1/p2/p3
+
+#.......................side-by-side plots.......................
+p1+p2+p3
+
+#..........side-by-side & stacked plots + graphic title..........
+p1+p2/p3
 ```
